@@ -1054,7 +1054,7 @@ mstring_mstr_n_str ( const string_t * const pStr, size_t start
     size_t left;
     char   first;
 
-    if (start >= mstrsize(pStr))
+    if (start > mstrsize(pStr))
         return NULL;
 
     /* Initialize 'characters remaining' and 'current position' */
